# EVIDEX

./: .env  00_START_HERE.md  AUTH_FIX_SUMMARY.md  BACKEND_SETUP_SUMMARY.md  DB.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  ERROR_PAGES_SUMMARY.md  QUICK_START_DEPLOY.md  README.md  READY_TO_DEPLOY.md  RENDER_NETLIFY_SETUP.md  docker-compose.yml  project_tree.txt
backend/: .env.example  .gitignore  API.md  Procfile  README.md  bootstrap_admin.py  build.sh  pyproject.toml  render.yaml  requirements.txt  test.py  test_report.py
backend/apps/: API.md
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/knowledge/: admin.py  models.py  report_pdf_views.py  report_preview_views.py  report_views.py  serializers.py  test_preview.py  tests.py  urls.py  views.py
backend/apps/knowledge/migrations/: 0001_initial.py  0002_alter_vulnerabilitydefinition_severity.py  0003_report_reportfinding.py  0004_findingevidence.py  0005_alter_report_created_by.py  0006_alter_reportfinding_description_and_more.py  0007_reportfinding_tester_description_and_more.py  0008_reportfinding_tester_severity_and_more.py  0009_alter_reportfinding_report.py  0010_report_status.py  0011_report_target.py  (+8 more)
backend/config/: cache_middleware.py  settings.py  urls.py
backend/templates/: 400.html  401.html  404.html  500.html
backend/templates/reports/: action_plan.html  base.html  cover.html  findings.html  report_preview_v2.html  summary.html
(+60 files in other folders)
